--- a/layouts/partials/photo-collage.html
+++ b/layouts/partials/photo-collage.html
@@ -15,10 +15,10 @@
   {{ $images := readDir "static/media" }}
   {{ range $images }}
       {{ if or (hasSuffix .Name ".jpg") (hasSuffix .Name ".jpeg") (hasSuffix .Name ".png") }}
-        <img src="/media/{{ .Name }}" alt="{{ .Name }}">
+        <img src="../media/{{ .Name }}" alt="{{ .Name }}">
       {{ else if or (hasSuffix .Name ".mp4") (hasSuffix .Name ".webm") }}
         <video controls>
-          <source src="/media/{{ .Name }}" type="video/{{ if hasSuffix .Name ".mp4" }}mp4{{ else }}webm{{ end }}">
+          <source src="../media/{{ .Name }}" type="video/{{ if hasSuffix .Name ".mp4" }}mp4{{ else }}webm{{ end }}">
           Your browser does not support the video tag.
         </video>
       {{ end }}
